deploy/k8s/uploader/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  evolution
  labels:
    app:  evolution
