deploy/k8s/uploader/base/uploader-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-api-deployment
  namespace: evolution


spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-api
  template:
    metadata:
      labels:
        app: uploader-api
    
    spec:
      containers:
      - name: uploader-api
        image: rohitrustagi007/evo_uploader:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
