deploy/k8s/uploader/base/uploader-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader-api-cluster-ip
  namespace: evolution
spec:
  type: ClusterIP
  selector:
    app: uploader-api
  ports:
  - name: uploader-api-port
    protocol: TCP
    port: 2001
    targetPort: 80
