deploy/k8s/uploader/base/uploader-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploader-ingress
  namespace: evolution
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      nginx.ingress.kubernetes.io/proxy-body-size: 8m
      nginx.org/mergeable-ingress-type: "minion"
  labels:
    name: uploader-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: evolution.k8
    http:
      paths:
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: uploader-api-cluster-ip
            port: 
              number: 2001
